2015-10-29  Qian Hong  <qhong@codeweavers.com>

	* init.cc (munge_threadfunc): Check that we're actually replacing
	the correct original function address on the stack.
	* ntdll.h (enum _THREADINFOCLASS): Add ThreadQuerySetWin32StartAddress.

2015-08-21  Jon Turney  <jon.turney@dronecode.org.uk>

	* cygwin-cxx.h: Remove execute permissions.
	* fenv.cc: Ditto.
	* how-startup-shutdown-works.txt: Ditto.
	* include/arpa/nameser.h: Ditto.
	* include/arpa/nameser_compat.h: Ditto.
	* include/fenv.h: Ditto.
	* include/resolv.h: Ditto.
	* libstdcxx_wrapper.cc: Ditto.

2015-10-23  Corinna Vinschen  <corinna@vinschen.de>

	* cygtls.cc (_cygtls::remove): Call remove_pending_sigs.
	* cygtls.h (_cygtls::remove_pending_sigs): Declare.
	* sigproc.cc (pending_signals::clear): Define new method taking a
	_cygtls pointer argument.  Drop pending signals for that thread.
	(_cygtls::remove_pending_sigs): Call pending_signals::clear for this
	thread.

2015-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* common.din (aligned_alloc): Export.
	(at_quick_exit): Export.
	(quick_exit): Export.

2015-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* sec_helper.cc (cygsid::get_sid): Don't reject SIDs with missing
	subauthorities.

2015-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* strfuncs.cc (sys_cp_wcstombs): Always return number of multibytes
	without trailing NUL as the documentation implies.  Throughout Cygwin,
	fix usage to align to this pattern.
	* fhandler_process.cc (format_process_winexename): Drop trailing NUL
	and LF from output.

2015-10-21  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread_getattr_np): Fix memory leak, remove usage of
	malloc for small local buffer.

2015-10-21  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check_reparse_point): Don't generate an EIO
	error if NtFsControlFile returns STATUS_NOT_A_REPARSE_POINT.

2015-09-23  Evgeny Grin  <k2k@yandex.ru>

	* fhandler_socket.cc (fhandler_socket::wait_for_events): Fix compiler